--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <a href="/products">All Products</a>
+    <a href="/products/new">Create a Product</a>
     <%= yield %>
   </body>
 </html>
